--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
+}
+
+application {
+    mainClass.set("Application")
 }
 
 group = 'com.feupldts2023'
@@ -11,7 +16,7 @@ repositories {
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation('org.junit.jupiter:junit-jupiter')
 }
 
 test {
