--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation('org.junit.jupiter:junit-jupiter')
+    // https://mvnrepository.com/artifact/com.googlecode.lanterna/lanterna
+    implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
 }
 
 test {
