--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter')
     // https://mvnrepository.com/artifact/com.googlecode.lanterna/lanterna
     implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
+    testImplementation 'org.mockito:mockito-core:3.7.7'
 }
 
 test {
