--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'info.solidsoft.pitest' version '1.9.0'
     id 'application'
 }
 
@@ -7,7 +8,7 @@ application {
     mainClass.set("Game")
 }
 
-group = 'com.feupldts2023'
+group = 'l03gr05'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -24,4 +25,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+pitest {
+    junit5PluginVersion = '1.1.1'
 }
